[gd_scene load_steps=15 format=2]

[ext_resource path="res://img/piso1.png" type="Texture" id=1]
[ext_resource path="res://scenes/AvanzarLbl.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Pentagono.tscn" type="PackedScene" id=3]
[ext_resource path="res://img/piso2.png" type="Texture" id=4]
[ext_resource path="res://scenes/Caja.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Violeta.tscn" type="PackedScene" id=6]
[ext_resource path="res://img/trampa.png" type="Texture" id=7]
[ext_resource path="res://img/background.jpg" type="Texture" id=8]
[ext_resource path="res://scenes/RestartButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Level 3.gd" type="Script" id=10]
[ext_resource path="res://scenes/ExitBtn.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/BackgroundPlayer.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88, 392 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 139.804, 24 )

[node name="Level 3" type="Node2D"]
script = ExtResource( 10 )

[node name="AvanzarLbl" parent="." instance=ExtResource( 2 )]
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Fondo" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="LeftWall" type="RigidBody2D" parent="ParallaxBackground/Fondo"]
mode = 1
sleeping = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Fondo/LeftWall"]
position = Vector2( 32, 360 )
scale = Vector2( 0.680851, 7.65957 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/Fondo/LeftWall"]
position = Vector2( -24, 336 )
shape = SubResource( 1 )

[node name="Floor" type="RigidBody2D" parent="ParallaxBackground/Fondo"]
mode = 1
sleeping = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Fondo/Floor"]
position = Vector2( 688.125, 607.75 )
scale = Vector2( 13.2739, 2.37766 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Fondo/Floor"]
position = Vector2( 632, 514.125 )
scale = Vector2( 13.8298, 1.03351 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/Fondo/Floor"]
position = Vector2( 552, 488 )
scale = Vector2( 5.43617, 1 )
shape = SubResource( 2 )

[node name="background" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 643.448, 418.082 )
z_index = -1
texture = ExtResource( 8 )

[node name="Violeta" parent="." instance=ExtResource( 6 )]
position = Vector2( 352, -38 )

[node name="Trampa" type="RigidBody2D" parent="."]
position = Vector2( 152, 81 )
mass = 6.12245
gravity_scale = 0.0
sleeping = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Trampa"]
position = Vector2( 416, 232 )
scale = Vector2( 0.816832, 0.790909 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Trampa"]
polygon = PoolVector2Array( 704, 383, 744, 383, 744, 191, 400, 191, 400, 119, 352, 119, 352, 191, 128, 191, 128, 79, 88, 79, 88, 239, 352, 239, 352, 343, 400, 343, 400, 239, 704, 239 )

[node name="Caja1" parent="." instance=ExtResource( 5 )]
position = Vector2( 24, -224 )

[node name="Caja2" parent="." instance=ExtResource( 5 )]
position = Vector2( 264, -232 )

[node name="PolygonStart" parent="." instance=ExtResource( 3 )]
position = Vector2( -256.39, -31.7839 )
scale = Vector2( 0.8, 0.8 )

[node name="PolygonEnd" parent="." instance=ExtResource( 3 )]
position = Vector2( -6.35669, -156.801 )

[node name="RestartButton" parent="." instance=ExtResource( 9 )]
margin_left = 1234.05
margin_top = 16.2663
margin_right = 1262.05
margin_bottom = 52.2663

[node name="ExitBtn" parent="." instance=ExtResource( 11 )]
position = Vector2( 943.567, -500.79 )

[node name="BackgroundPlayer" parent="." instance=ExtResource( 12 )]
[connection signal="body_entered" from="PolygonEnd" to="." method="_on_PolygonEnd_body_entered"]
[connection signal="body_exited" from="PolygonEnd" to="." method="_on_PolygonEnd_body_exited"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
